fix(UI): pae layout breaking after upgrading bootstrap to v4.6.2

--- a/frappe/public/scss/desk/page.scss
+++ b/frappe/public/scss/desk/page.scss
@@ -76,6 +76,7 @@
 
 .layout-main-section-wrapper {
 	margin-bottom: var(--page-bottom-margin);
+	min-width: 0;
 }
 
 .layout-main-section.frappe-card {
